--- a/managestaff.html
+++ b/managestaff.html
@@ -19,7 +19,7 @@
                 <label for="emp_id">Staff ID:</label>
                 <input type="number" id="emp_id" required><br>
                 <label for="username">Username:</label>
-                <input type="text" id="username" required><br>
+                <input type="text" id="username" name="username" required><br>
                 <label for="email">Email:</label>
                 <input type="email" id="email" required><br>
                 <label for="position">Position:</label>
