--- a/managestaff.html
+++ b/managestaff.html
@@ -15,23 +15,22 @@
         
         <section id="add-employee">
             <h2>Add Admin</h2>
-            <form id="addForm">
-                <label for="emp_id">Staff ID:</label>
-                <input type="number" id="emp_id" required><br>
+            <form id="addForm" method="POST" enctype="multipart/form-data" action="addStaff.php">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required><br>
                 <label for="email">Email:</label>
-                <input type="email" id="email" required><br>
+                <input type="email" id="email" name="email" required><br>
                 <label for="position">Position:</label>
-                <input type="text" id="position" required><br>
+                <input type="text" id="position" name="position" required><br>
                 <label for="salary">Salary:</label>
-                <input type="number" id="salary" required><br>
+                <input type="number" id="salary" name="salary" required><br>
                 <label for="password">Password:</label>
-                <input type="password" id="password" required><br>
+                <input type="password" id="password" name="password" required><br>
                 <label for="image">Image:</label>
-                <input type="file" id="image" required><br>
+                <input type="file" id="image" name="image" required><br>
                 <button type="submit">Add Staff</button>
             </form>
+            
         </section>
 
         <section id="view-employees">
