--- a/custregister.html
+++ b/custregister.html
@@ -21,11 +21,11 @@
             border-bottom: 5px solid #333;
         }
         h1, h2, h3 {
-            Serif Pro', serif;
-        }
-        p {
-            font-family: 'Source Sans Pro', serif;
-        }
+    font-family: 'Source Serif Pro', serif;
+}
+p {
+    font-family: 'Source Sans Pro', sans-serif;
+}
         .button {
             font-family: 'Source Sans Pro', sans-serif;
             background-color: #ff4b2b;
@@ -114,7 +114,7 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
                 </div>
-                <div class=" id="phone" name="phone" required>
+                <div class=" id="phone name="phone" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
