--- a/custservice.html
+++ b/custservice.html
@@ -89,7 +89,7 @@
             <h2>Contact Us</h2>
             <p>If you have any questions or need assistance, please fill out the form below and our customer service team will get back to you as soon as possible.</p>
             <div class="form-container">
-                <form action="save_message.php" method="post">
+                <form action="savemessage.php" method="post">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
