--- a/admindashboard.html
+++ b/admindashboard.html
@@ -34,7 +34,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="manageproduct.html">
 					<i class='bx bxs-doughnut-chart' ></i>
 					<span class="text">Analytics</span>
 				</a>
