--- a/manageproduct.html
+++ b/manageproduct.html
@@ -37,7 +37,7 @@
         <main>
             <section id="product-list">
                 <h2>Manage Products</h2>
-                <button class="add-product" onclick="window.location.href='addproduct.html'">Add New Product</button>
+                <button class="add-product" onclick="window.location.href='addproduct.php'">Add New Product</button>
                 <table>
                     <thead>
                         <tr>
