--- a/admindashboard.html
+++ b/admindashboard.html
@@ -28,7 +28,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="manageproduct.html">
+				<a href="manageproduct.php">
 					<i class='bx bxs-shopping-bag-alt' ></i>
 					<span class="text">My Store</span>
 				</a>
