--- a/managecategory.html
+++ b/managecategory.html
@@ -6,6 +6,35 @@
     <link rel="stylesheet" href="order.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Manage Product Categories</title>
+    <style>
+        .modal {
+            display: none; 
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border-radius: 5px;
+            width: 40%;
+            text-align: center;
+        }
+
+        .close {
+            color: red;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -19,7 +48,7 @@
     <div class="orderIt"><b>Categories Management</b></div>
     <br>
     <button class="action-button" id="addCategoryBtn">Add New Category</button>
-    </div>
+    
     <div class="table-container">
         <h2>Categories List</h2>
         <table>
@@ -30,53 +59,52 @@
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="categoryTableBody">
                 <tr>
                     <td>Games</td>
                     <td>PC, Console, Mobile, and VR games</td>
                     <td>
-                        <button>Edit</button>
-                        <button>Delete</button>
+                        <button class="edit-btn">Edit</button>
+                        <button class="delete-btn">Delete</button>
                     </td>
                 </tr>
                 <tr>
                     <td>Gaming Consoles</td>
                     <td>PlayStation, Xbox, Nintendo Switch</td>
                     <td>
-                        <button>Edit</button>
-                        <button>Delete</button>
+                        <button class="edit-btn">Edit</button>
+                        <button class="delete-btn">Delete</button>
                     </td>
                 </tr>
                 <tr>
                     <td>Gaming Accessories</td>
                     <td>Controllers, Headsets, Keyboards</td>
                     <td>
-                        <button>Edit</button>
-                        <button>Delete</button>
+                        <button class="edit-btn">Edit</button>
+                        <button class="delete-btn">Delete</button>
                     </td>
                 </tr>
                 <tr>
                     <td>Merchandise</td>
                     <td>Apparel, Posters, Collectibles</td>
                     <td>
-                        <button>Edit</button>
-                        <button>Delete</button>
+                        <button class="edit-btn">Edit</button>
+                        <button class="delete-btn">Delete</button>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <br>
-        
-
-    <div class="footer">
     </div>
+
+    <div class="footer"></div>
 
     <!-- Modal for adding/editing categories -->
     <div id="categoryModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Add/Edit Category</h2>
-            <form>
+            <h2 id="modalTitle">Add Category</h2>
+            <form id="categoryForm">
+                <input type="hidden" id="categoryIndex">
                 <label for="categoryName">Category Name:</label>
                 <input type="text" id="categoryName" name="categoryName" required>
                 <label for="categoryDescription">Description:</label>
@@ -87,23 +115,86 @@
     </div>
 
     <script>
-        // Get the modal
         var modal = document.getElementById("categoryModal");
         var addCategoryBtn = document.getElementById("addCategoryBtn");
+        var closeBtn = document.getElementsByClassName("close")[0];
+        var categoryForm = document.getElementById("categoryForm");
+        var categoryTableBody = document.getElementById("categoryTableBody");
+        var categoryIndex = document.getElementById("categoryIndex");
+        var modalTitle = document.getElementById("modalTitle");
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks the button, open the modal
+        // Open modal for adding a new category
         addCategoryBtn.onclick = function() {
+            categoryIndex.value = ""; // Clear index (new entry)
+            categoryForm.reset();
+            modalTitle.innerText = "Add Category";
             modal.style.display = "block";
         }
 
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
+        // Close modal
+        closeBtn.onclick = function() {
             modal.style.display = "none";
         }
 
-        // When the user clicks anywhere outside of the modal, close it
+        // Close modal if clicked outside
         window.onclick = function(event) {
-            if (event.target == modal)
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+
+        // Edit category
+        categoryTableBody.addEventListener("click", function(event) {
+            if (event.target.classList.contains("edit-btn")) {
+                var row = event.target.closest("tr");
+                var cells = row.getElementsByTagName("td");
+
+                categoryIndex.value = row.rowIndex - 1; // Store index for update
+                document.getElementById("categoryName").value = cells[0].innerText;
+                document.getElementById("categoryDescription").value = cells[1].innerText;
+
+                modalTitle.innerText = "Edit Category";
+                modal.style.display = "block";
+            }
+        });
+
+        // Handle form submission (Add/Edit)
+        categoryForm.addEventListener("submit", function(event) {
+            event.preventDefault();
+            var name = document.getElementById("categoryName").value;
+            var description = document.getElementById("categoryDescription").value;
+
+            if (categoryIndex.value === "") {
+                // Add new category
+                var newRow = categoryTableBody.insertRow();
+                newRow.innerHTML = `
+                    <td>${name}</td>
+                    <td>${description}</td>
+                    <td>
+                        <button class="edit-btn">Edit</button>
+                        <button class="delete-btn">Delete</button>
+                    </td>
+                `;
+            } else {
+                // Edit existing category
+                var index = parseInt(categoryIndex.value);
+                var row = categoryTableBody.rows[index];
+                row.cells[0].innerText = name;
+                row.cells[1].innerText = description;
+            }
+
+            modal.style.display = "none";
+            categoryForm.reset();
+        });
+
+        // Delete category
+        categoryTableBody.addEventListener("click", function(event) {
+            if (event.target.classList.contains("delete-btn")) {
+                var row = event.target.closest("tr");
+                row.remove();
+            }
+        });
+    </script>
+
+</body>
+</html>
