--- a/admindashboard.html
+++ b/admindashboard.html
@@ -34,9 +34,9 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="order.html">
 					<i class='bx bxs-doughnut-chart' ></i>
-					<span class="text">Analytics</span>
+					<span class="text">Order</span>
 				</a>
 			</li>
 			<li>
