--- a/admindashboard.html
+++ b/admindashboard.html
@@ -40,7 +40,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="signup_admin.php">
+				<a href="signup_member.php">
 					<i class='bx bxs-message-dots' ></i>
 					<span class="text">Message</span>
 				</a>
