--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Member Added Successfully!</h1>
         <p>Your data has been saved successfully.</p>
-        <button onclick="window.location.href='add_member.html'">Add Another Member</button>
+        <button onclick="window.location.href='addmember.html'">Add Another Member</button>
         <button onclick="window.location.href='member_list.html'">View Members</button>
     </div>
 
