--- a/success.html
+++ b/success.html
@@ -12,7 +12,7 @@
         <h1>Member Added Successfully!</h1>
         <p>Your data has been saved successfully.</p>
         <button onclick="window.location.href='addmember.html'">Add Another Member</button>
-        <button onclick="window.location.href='member_list.html'">View Members</button>
+        <button onclick="window.location.href='admindashboard.html'">Back to Dashboard</button>
     </div>
 
 </body>
