--- a/custlogin.html
+++ b/custlogin.html
@@ -81,6 +81,18 @@
             border-color: red;
             outline: none;
         }
+        .register-link {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .register-link a {
+            color: red;
+            text-decoration: none;
+            font-family: 'Source Sans Pro', sans-serif;
+        }
+        .register-link a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -100,9 +112,10 @@
                 </div>
                 <button type="submit" class="button">Login</button>
             </form>
+            <div class="register-link">
+                <p>Don't have an account? <a href="custregister.html">Register here</a></p>
+            </div>
         </div>
     </div>
 </body>
 </html>
-
-
