--- a/addmember.html
+++ b/addmember.html
@@ -41,25 +41,23 @@
     </div>
 
     <script>
-        document.getElementById("membership").addEventListener("change", function() {
-            document.getElementById("fee").value = this.value === "Premium" ? "20.00" : "10.00";
-        });
-
         document.getElementById("addForm").addEventListener("submit", function(event) {
-            event.preventDefault();
+    event.preventDefault();
 
-            let formData = new FormData(this);
+    let formData = new FormData(this);
+    console.log("Form Data:", formData);  // Log the form data for debugging
 
-            fetch("signup_member.php", {
-                method: "POST",
-                body: formData
-            })
-            .then(response => response.text())
-            .then(data => {
-                window.location.href = "success.html"; // Redirect to success page
-            })
-            .catch(error => console.error("Error:", error));
-        });
+    fetch("signup_member.php", {
+        method: "POST",
+        body: formData
+    })
+    .then(response => response.text())
+    .then(data => {
+        window.location.href = "success.html"; // Redirect to success page
+    })
+    .catch(error => console.error("Error:", error));
+    });
+
     </script>
 
 </body>
