--- a/custlogin.html
+++ b/custlogin.html
@@ -101,7 +101,7 @@
     </header>
     <div class="form-container">
         <div class="form-content">
-            <form>
+            <form action="custlogin.php" method="POST"></form>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
