--- a/menu.html
+++ b/menu.html
@@ -107,6 +107,7 @@
             <li><a href="#order-history">Order History</a></li>
             <li><a href="#need-help">Need Help</a></li>
             <li><a href="loginadmin.html">Login Admin</a></li>
+            <li><a href="addmember.html">Member Registration</a></li>
         </ul>
     </div>
 
