--- a/custregister.html
+++ b/custregister.html
@@ -14,7 +14,7 @@
             padding: 0;
         }
         header {
-            background: linear-gradient(45deg, #ff4b2b, #ff416c);
+            background: linear-gradient(45deg, #ff4b2b, #9e0226);
             color: white;
             padding: 40px 20px;
             text-align: center;
