--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
             background-color: #d03b3b;
             color: white;
             padding: 20px;
-            position: fixed; /* Changed to fixed so the menu stays on screen */
+            position: fixed;
             top: 0;
             left: 0;
             width: 300px;
@@ -45,7 +45,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            flex-grow: 1; /* Allows the menu items to take up space */
+            flex-grow: 1;
         }
         .menu li {
             padding: 15px 0;
@@ -83,7 +83,7 @@
             display: block;
         }
         .menu li:last-child {
-            margin-top: auto; /* Push the login link to the bottom */
+            margin-top: auto;
         }
     </style>
 </head>
@@ -106,8 +106,8 @@
             </li>
             <li><a href="#order-history">Order History</a></li>
             <li><a href="#need-help">Need Help</a></li>
+            <li><a href="addmember.html">Membership</a></li>
             <li><a href="loginadmin.html">Login Admin</a></li>
-            <li><a href="addmember.html">Member Registration</a></li> 
         </ul>
     </div>
 
