--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <section class="banner">
         <h2>Current Deals</h2>
         <div class="deal">
-            <img src="image/ps5.webp" alt="Deal 1">
+            <img src="image/ps5.jpg" alt="Deal 1">
             <p>Check out our latest deals on top games and accessories!</p>
         </div>
         <h2>New Arrivals</h2>
