--- a/admindashboard.html
+++ b/admindashboard.html
@@ -46,7 +46,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="managestaff.html">
+				<a href="addadmin.php">
 					<i class='bx bxs-group' ></i>
 					<span class="text">Team</span>
 				</a>
