--- a/custservice.html
+++ b/custservice.html
@@ -79,6 +79,14 @@
             background-color: darkred;
         }
     </style>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent the default form submission
+            alert('Message sent successfully'); // Display the pop-up message
+            // Optionally, you can reset the form here
+            event.target.reset();
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -89,7 +97,7 @@
             <h2>Contact Us</h2>
             <p>If you have any questions or need assistance, please fill out the form below and our customer service team will get back to you as soon as possible.</p>
             <div class="form-container">
-                <form action="savemessage.php" method="POST">
+                <form onsubmit="handleSubmit(event)">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
