--- a/loginadmin.html
+++ b/loginadmin.html
@@ -2,8 +2,39 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {font-family: Arial, sans-serif;}
-    form {border: 3px solid #f1f1f1;}
+    body {
+      font-family: Arial, sans-serif;
+      background-image: url('image/backgroudad.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .blurred-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-image: url('image/backgroudad.jpg');
+      background-size: cover;
+      background-position: center;
+      filter: blur(8px); /* Apply the blur effect */
+      z-index: -1; /* Keeps the blur background behind the form */
+    }
+
+    form {
+      border: 3px solid #f1f1f1;
+      background-color: rgba(255, 255, 255, 0.8); /* Make form background slightly transparent */
+      border-radius: 8px;
+      width: 300px;
+      padding: 20px;
+      margin: 50px auto;
+      position: relative;
+      z-index: 1;
+    }
+
     input[type=text], input[type=password] {
       width: 100%;
       padding: 12px 20px;
@@ -12,6 +43,7 @@
       border: 1px solid #ccc;
       box-sizing: border-box;
     }
+
     button {
       background-color: #C70039;
       color: white;
@@ -21,43 +53,53 @@
       cursor: pointer;
       width: 100%;
     }
+
     button:hover {
       opacity: 0.8;
     }
+
     .cancelbtn {
       width: auto;
       padding: 10px 18px;
       background-color: #f44336;
     }
+
     .imgcontainer {
       text-align: center;
       margin: 24px 0 12px 0;
     }
+
     img.avatar {
       width: 150px;
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
     }
+
     .container {
       padding: 16px;
     }
+
     span.psw {
       float: right;
       padding-top: 16px;
     }
+
     @media screen and (max-width: 300px) {
       span.psw {
-         display: block;
-         float: none;
+        display: block;
+        float: none;
       }
+
       .cancelbtn {
-         width: 100%;
+        width: 100%;
       }
     }
   </style>
 </head>
 <body>
+  <div class="blurred-background"></div>
+
   <center><h1>Gaming Store</h1></center>
   <center><h2>Login Form</h2></center>
 
