--- a/loginadmin.html
+++ b/loginadmin.html
@@ -17,7 +17,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-image: url('image/backgroudad.jpg');
+      background-image: url('backgroudad.jpg');
       background-size: cover;
       background-position: center;
       filter: blur(8px); /* Apply the blur effect */
