--- a/loginadmin.html
+++ b/loginadmin.html
@@ -4,7 +4,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('image/backgroudad.jpg');
+      background-image: url('image/backgroundad.jpg');
       background-size: cover;
       background-position: center;
       height: 100vh;
@@ -17,7 +17,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-image: url('backgroudad.jpg');
+      background-image: url('image/backgroundad.jpg');
       background-size: cover;
       background-position: center;
       filter: blur(8px); /* Apply the blur effect */
