--- a/loginadmin.html
+++ b/loginadmin.html
@@ -20,8 +20,8 @@
       background-image: url('image/backgroundad.jpg');
       background-size: cover;
       background-position: center;
-      filter: blur(8px); /* Apply the blur effect */
-      z-index: -1; /* Keeps the blur background behind the form */
+      /* Remove the blur effect */
+      z-index: -1; /* Keeps the background behind the form */
     }
 
     form {
