--- a/loginadmin.html
+++ b/loginadmin.html
@@ -20,13 +20,12 @@
       background-image: url('image/backgroundad.jpg');
       background-size: cover;
       background-position: center;
-      /* Remove the blur effect */
-      z-index: -1; /* Keeps the background behind the form */
+      z-index: -1;
     }
 
     form {
       border: 3px solid #f1f1f1;
-      background-color: rgba(255, 255, 255, 0.8); /* Make form background slightly transparent */
+      background-color: rgba(255, 255, 255, 0.8);
       border-radius: 8px;
       width: 300px;
       padding: 20px;
@@ -95,13 +94,27 @@
         width: 100%;
       }
     }
+
+    /* Style for the headings */
+    h1, h2 {
+      color: white; /* Change heading font color to white */
+      text-align: center;
+    }
+
+    h1 {
+      margin-top: 50px; /* Adjusted margin for "Gaming Store" */
+    }
+
+    h2 {
+      margin-top: 10px; /* Adjusted margin for "Login Form" */
+    }
   </style>
 </head>
 <body>
   <div class="blurred-background"></div>
 
-  <center><h1>Gaming Store</h1></center>
-  <center><h2>Login Form</h2></center>
+  <h1>Gaming Store</h1>
+  <h2>Login Form</h2>
 
   <form action="login_admin.php" method="post">
     <div class="imgcontainer">
