--- a/loginadmin.html
+++ b/loginadmin.html
@@ -7,6 +7,7 @@
       background-image: url('image/backgroundad.jpg');
       background-size: cover;
       background-position: center;
+      background-attachment: fixed; /* Ensures the background doesn't repeat */
       height: 100vh;
       margin: 0;
     }
@@ -21,6 +22,7 @@
       background-size: cover;
       background-position: center;
       z-index: -1;
+      filter: blur(8px); /* Apply the blur effect */
     }
 
     form {
