--- a/admindashboard.html
+++ b/admindashboard.html
@@ -30,7 +30,7 @@
 			<li>
 				<a href="manageproduct.php">
 					<i class='bx bxs-shopping-bag-alt' ></i>
-					<span class="text">My Store</span>
+					<span class="text">Product Management</span>
 				</a>
 			</li>
 			<li>
