--- a/admindashboard.html
+++ b/admindashboard.html
@@ -83,11 +83,10 @@
 					<button type="submit" class="search-btn"><i class='bx bx-search' ></i></button>
 				</div>
 			</form>
-			<input type="checkbox" id="switch-mode" hidden>
-			<label for="switch-mode" class="switch-mode"></label>
+			
 			<a href="#" class="notification">
 				<i class='bx bxs-bell' ></i>
-				<span class="num">8</span>
+				<span class="num"></span>
 			</a>
 			<a href="#" class="profile">
 				<img src="image/adlina.jpg">
