--- a/admindashboard.html
+++ b/admindashboard.html
@@ -48,7 +48,7 @@
 			<li>
 				<a href="addadmin.php">
 					<i class='bx bxs-group' ></i>
-					<span class="text">Team</span>
+					<span class="text">Admin</span>
 				</a>
 			</li>
 		</ul>
