--- a/admindashboard.html
+++ b/admindashboard.html
@@ -40,9 +40,9 @@
 				</a>
 			</li>
 			<li>
-				<a href="addmember.html">
+				<a href="customer_list.php">
 					<i class='bx bxs-message-dots' ></i>
-					<span class="text">Message</span>
+					<span class="text">Customer</span>
 				</a>
 			</li>
 			<li>
