--- a/admindashboard.html
+++ b/admindashboard.html
@@ -41,7 +41,7 @@
 			</li>
 			<li>
 				<a href="customer_list.php">
-					<i class='bx bxs-message-dots' ></i>
+					<i class='fas fa-user-friends' ></i>
 					<span class="text">Customer</span>
 				</a>
 			</li>
