--- a/admindashboard.html
+++ b/admindashboard.html
@@ -34,7 +34,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="order.html">
+				<a href="order.php">
 					<i class='bx bxs-doughnut-chart' ></i>
 					<span class="text">Order</span>
 				</a>
