--- a/loginadmin.html
+++ b/loginadmin.html
@@ -79,6 +79,7 @@
       display: flex;
       align-items: center;
       font-size: 14px;
+      margin-bottom: 8px;
     }
 
     .checkbox-label input {
@@ -90,6 +91,7 @@
       padding: 10px;
       text-align: right;
       font-size: 14px;
+      border-radius: 0 0 10px 10px;
     }
 
     a {
@@ -139,7 +141,7 @@
   <script>
     function togglePassword() {
       const passwordInput = document.getElementById("password");
-      passwordInput.type = passwordInput.type === "password" ? "text" : "password";
+      passwordInput.type = (passwordInput.type === "password") ? "text" : "password";
     }
   </script>
 
