--- a/loginadmin.html
+++ b/loginadmin.html
@@ -129,7 +129,7 @@
         <input type="checkbox" name="remember" checked> Remember me
       </div>
 
-      <button type="submit" class="submitbtn" onclick="window.location.href='admindashboard.php'">Login</button>
+      <button type="submit" class="submitbtn" onclick="window.location.href='admindashboard.html'">Login</button>
       <button type="button" class="cancelbtn" onclick="window.location.href='index.html'">Cancel</button>
     </div>
 
