--- a/admindashboard.html
+++ b/admindashboard.html
@@ -88,7 +88,7 @@
 				<i class='bx bxs-bell' ></i>
 				<span class="num"></span>
 			</a>
-			<a href="#" class="profile">
+			<a href="profile.php" class="profile">
 				<img src="image/adlina.jpg">
 			</a>
 		</nav>
