--- a/custresetpass.html
+++ b/custresetpass.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> User Reset Password</title>
+    <title>User Reset Password</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -89,6 +89,10 @@
         <main>
             <form>
                 <div class="form-group">
+                    <label for="old-password">Old Password</label>
+                    <input type="password" id="old-password" name="old-password" required>
+                </div>
+                <div class="form-group" if new database connect.php is working Required="error message.php">
                     <label for="new-password">New Password</label>
                     <input type="password" id="new-password" name="new-password" required>
                 </div>
