--- a/forgotpass.html
+++ b/forgotpass.html
@@ -88,7 +88,7 @@
         </header>
         <main>
 
-            <form>
+            <form action="forgotpass.php" method="post"></form>
                 <div class="form-group">
                     <label for="identifier">Choose one of the following:</label>
                     <input type="text" id="identifier" name="identifier" placeholder="Email, Phone Number, or Username" required>
