--- a/admindashboard.html
+++ b/admindashboard.html
@@ -34,6 +34,12 @@
 				</a>
 			</li>
 			<li>
+				<a href="manage_category.php">
+					<i class='bx bxs-category'></i>
+					<span class="text">Category Management</span>
+				</a>
+			</li>
+			<li>
 				<a href="order.php">
 					<i class='bx bxs-doughnut-chart' ></i>
 					<span class="text">Order</span>
