--- a/custregister.html
+++ b/custregister.html
@@ -114,7 +114,13 @@ p {
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
                 </div>
-                <div class=" id="phone name="phone" required>
+                <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="phone" id="phone name" name="phone" required>
+                </div>
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                   <input type="text" id="address" name="address" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
