--- a/custregister.html
+++ b/custregister.html
@@ -14,7 +14,7 @@
             padding: 0;
         }
         header {
-            background: linear-gradient(45deg, #ff4b2b, #9e0226);
+            background: linear-gradient(45deg, #f02703, #9e0226);
             color: white;
             padding: 40px 20px;
             text-align: center;
@@ -119,7 +119,7 @@ p {
                     <input type="phone" id="phone name" name="phone" required>
                 </div>
                 <div class="form-group">
-                    <label for="address">Address:</label>
+                    <label for="address">Address</label>
                    <input type="text" id="address" name="address" required>
                 </div>
                 <div class="form-group">
