--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -558,13 +557,15 @@
         <div id="menuContainer">
             <span id="closeMenu">&times;</span>
             <div id="menuContent">
+                <div class="menu-item"><a href="custlogin.html">ACCOUNT</a></div>
                 <div class="menu-item"><a href="#nintendo">NINTENDO</a></div>
                 <div class="menu-item"><a href="#playstation">PLAYSTATION</a></div>
                 <div class="menu-item"><a href="#xbox">XBOX</a></div>
                 <div class="menu-item"><a href="PRODUCTLIST.html">ACCESSORIES</a></div>
                 <div class="menu-item"><a href="#vr">VR</a></div>
-                <div class="menu-item"><a href="custlogin.html">ACCOUNT</a></div>
                 <div class="menu-item"><a href="#cart">CART</a></div>
+                <div class="menu-item"><a href="ORDERHISTORY.html">ORDER</a></div>
+                <div class="menu-item"><a href="login_admin.php">LOGIN ADMIN</a></div>
             </div>
         </div>
     </div>
