--- a/custlogin.html
+++ b/custlogin.html
@@ -21,7 +21,7 @@
             color: white;
             padding : 20px;
             text-align: center;
-            border-bottom: 5px solid rgb(0, 0, 0);
+            border-bottom: 2px solid rgb(0, 0, 0);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
@@ -96,6 +96,17 @@
         .links a:hover {
             text-decoration: underline;
         }
+        
+footer { background: linear-gradient(45deg, red, darkred);
+ color: white;
+ text-align: center;
+ padding: 100px;
+ border-top: 2px solid rgb(0, 0, 0);
+box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+font-family: 'Source Sans Pro', sans-serif;
+ }
+
+
     </style>
 </head>
 <body>
@@ -118,10 +129,14 @@
             <div class="links">
                 <p>Don't have an account? <a href="custregister.html">Register here</a></p>
                 <p>Having troubles? <a href="custservice.html">Contact Us</a></p>
-                <p>Want to update your profile? <a href="custeditprofile.html">Edit Profile</a></p>
                 <p>Forgotten your password? <a href="forgotpass.html">Forgot Password</a></p>
             </div>
         </div>
     </div>
+    
+    <footer>
+   <p>&copy; 2025 Gaming Store. All rights reserved.</p>
+ </footer>
+
 </body>
 </html>
