--- a/custregister.html
+++ b/custregister.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Source Serif Pro', serif;
+            font-family: 'Source Sans Pro', serif;
             background-color: #f0f0f0;
             color: #333;
             margin: 0;
-            padding: 0;
+            padding: 2;
         }
         header {
             background: linear-gradient(45deg, #f02703, #9e0226);
@@ -24,10 +24,10 @@
     font-family: 'Source Serif Pro', serif;
 }
 p {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', serif;
 }
         .button {
-            font-family: 'Source Sans Pro', sans-serif;
+            font-family: 'Source Sans Pro', serif;
             background-color: #ff4b2b;
             color: white;
             border: none;
@@ -53,7 +53,7 @@ p {
         }
         .form-group label {
             display: block;
-            font-family: 'Source Sans Pro', sans-serif;
+            font-family: 'Source Sans Pro', serif;
             margin-bottom: 5px;
             font-weight: bold;
         }
@@ -93,6 +93,14 @@ p {
         .popup .close:hover {
             background-color: #ff416c;
         }
+        footer { background: linear-gradient(45deg, red, darkred);
+ color: white;
+ text-align: center;
+ padding: 100px;
+ border-top: 2px solid rgb(0, 0, 0);
+box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+font-family: 'Source Sans Pro', sans-serif;
+ }
     </style>
 </head>
 <body>
@@ -166,5 +174,8 @@ p {
             document.getElementById('popup').style.display = 'none';
         }
     </script>
+     <footer>
+         <p>&copy; 2025 Gaming Store. All rights reserved.</p>
+        </footer>
 </body>
 </html>
