--- a/custservice.html
+++ b/custservice.html
@@ -22,10 +22,7 @@
             border-radius: 15px 15px 0 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        h1, h2, h3 {
-            font-family: 'Source Serif Pro', serif;
-        }
-        p {
+        h1, h2, h3, p {
             font-family: 'Source Serif Pro', serif;
         }
         .container {
@@ -33,17 +30,12 @@
         }
         .form-container {
             max-width: 600px;
-            width: 100%;
             margin: 20px auto;
             padding: 20px;
             border: 1px solid #ddd;
             border-radius: 15px;
             background-color: #f9f9f9;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .form-container:hover {
-            transform: translateY(-5px);
         }
         .form-group {
             margin-bottom: 15px;
@@ -59,7 +51,6 @@
             border: 1px solid #ddd;
             border-radius: 15px;
             font-family: 'Source Serif Pro', serif;
-            transition: border-color 0.3s ease;
         }
         .form-group input:focus, .form-group textarea:focus {
             border-color: red;
@@ -73,20 +64,37 @@
             padding: 10px 20px;
             border-radius: 15px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
         }
         .button:hover {
             background-color: darkred;
         }
     </style>
-    <script>
-        function handleSubmit(event) {
-            event.preventDefault(); // Prevent the default form submission
-            alert('Message sent successfully'); // Display the pop-up message
-            // Optionally, you can reset the form here
-            event.target.reset();
-        }
-    </script>
+    
+<script>
+function handleSubmit(event) {
+     event.preventDefault(); // Prevent the default form submission
+      var form = event.target;
+
+   // Create a new FormData object
+     var formData = new FormData(form);
+
+      // Send the form data using fetch
+        fetch('custservice.php', {
+        method: 'POST',
+        body: formData
+        })
+         .then(response => response.text())
+         .then(data => {
+            alert('Thanks, your message has been sent');
+            form.reset(); // Optionally reset the form
+            })
+             .catch(error => {
+                console.error('Error:', error);
+            });
+ }
+ </script>
+
+
 </head>
 <body>
     <header>
@@ -97,7 +105,7 @@
             <h2>Contact Us</h2>
             <p>If you have any questions or need assistance, please fill out the form below and our customer service team will get back to you as soon as possible.</p>
             <div class="form-container">
-                <form onsubmit="handleSubmit(event)">
+                <form action="custservice.php" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
