--- a/custlogin.html
+++ b/custlogin.html
@@ -377,7 +377,7 @@
             </form>
             <div class="login-links">
                 <a href="custregister.html">REGISTER</a> | 
-                <a href="forgotpass.html">FORGOT PASSWORD</a> | 
+                <a href="forgotpass.php">FORGOT PASSWORD</a> | 
                 <a href="custservice.html">HELP</a>
             </div>
         </div>
