--- a/custeditprofile.html
+++ b/custeditprofile.html
@@ -27,6 +27,10 @@
             color: #dc2626;
             font-weight: 600;
         }
+        .footer-links {
+                flex-direction: column;
+                gap: 15px;
+            }
     </style>
 </head>
 <body class="bg-red-50">
