--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                 <div class="product-info">
                     <h3>DualSense Controller</h3>
                     <div class="product-price">RM269.00</div>
-                    <a href="NEW_PS5.html" class="view-product">View Product</a>
+                    <a href="VIEWPRODUCT.php" class="view-product">View Product</a>
                 </div>
             </div>
     
@@ -570,7 +570,7 @@
                 <div class="product-info">
                     <h3>Nintendo Switch</h3>
                     <div class="product-price">RM1,499.00</div>
-                    <a href="NEW_PS5.html" class="view-product">View Product</a>
+                    <a href="VIEWPRODUCT.php" class="view-product">View Product</a>
                 </div>
             </div>
     
@@ -580,7 +580,7 @@
                 <div class="product-info">
                     <h3>PS5 PRO CONTROLLER</h3>
                     <div class="product-price">RM2,399.00</div>
-                    <a href="NEW_PS5.html" class="view-product">View Product</a>
+                    <a href="VIEWPRODUCT.php" class="view-product">View Product</a>
                 </div>
             </div>
         </div>
