--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <a href="custlogin.html">
                     <i class="fas fa-user"></i>
                 </a>
-                <a href="ADDTOCART.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="ADDTOCART.php"><i class="fas fa-shopping-cart"></i></a>
             </div>
         </nav>
     </header>
